--- a/app/views/pages/edit.html.haml
+++ b/app/views/pages/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing page
+.pages
+  .edit
+    %h1 Editing page
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Show', @page
-\|
-= link_to 'Back', pages_path
+    = link_to 'Show', @page
+    \|
+    = link_to 'Back', pages_path
