--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -3,6 +3,7 @@
 %table
   %tr
     %th Title
+    %th User
 
     %th
     %th
@@ -11,6 +12,7 @@
   - @pages.each do |page|
     %tr
       %td= page.title
+      %td= page.user.username
 
       %td= link_to 'Show', page
       %td= link_to 'Edit', edit_page_path(page)
